# Leet_code

./: README.md  convertTemperature.py  pyproject.toml
easy/: 1.py  100.py  1002.py  1005.py  1009.py  1013.py  1018.py  1021.py  1025.py  1030.py  1037.py  104.py  1046.py  1047.py  1051.py  1068.py  1071.py  1078.py  1089.py  1103.py  1122.py  1128.py  1137.py  1148.py  1154.py  1160.py  118.py  1184.py  1189.py  119.py  1200.py  1207.py  121.py  1217.py  1221.py  1232.py  125.py  1253.py  1260.py  1266.py  (+607 more)
easy/in_work/: 0.py  00.py  1.json  1030.py  1047.py  1122.py  1185.py  12.py  1200.py  1207.py  1217.py  1221.py  1253.py  1370.py  1408.py  1544.py  1668.py  1678.py  17.py  1704.py  1720.py  1758.py  1773.py  1854.py  1869.py  1909.py  1957.py  202.py  2047.py  2085.py  2129.py  2206.py  2224.py  2236.py  2239.py  2287.py  2315.py  2325.py  2341.py  2379.py  (+27 more)
hard/: 220.py  23.py  239.py  315.py  4.py  41.py  480.py  895.py
hard/in_work/: 3266.py
medium/: 1004.py  1010.py  1014.py  1015.py  1017.py  1043.py  11.py  12.py  122.py  1255.py  1277.py  1329.py  1333.py  1338.py  1343.py  1347.py  1357.py  137.py  1371.py  1381.py  1387.py  1395.py  1409.py  142.py  1438.py  1441.py  147.py  1472.py  1476.py  148.py  1492.py  1493.py  15.py  1508.py  151.py  152.py  1525.py  153.py  155.py  1551.py  (+210 more)
medium/in_work/: 1043.py  11.py  1255.py  1277.py  1282.py  131.py  1343.py  1371.py  1493.py  1641.py  165.py  19.py  1968.py  204.py  2405.py  (+28 more)
model/: models_tree.py
stepik/: 2.13.1.py  2.13.2.py  2.13.3.py  2.13.4.py  2.13.5.py  2.14.1.py  2.14.2.py  2.14.3.py
