[tool.poetry]
name = "Lets_Code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
isort = "^5.12.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
memory-profiler = "^0.61.0"
psutil = "^5.9.6"
numba = "^0.59.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
